--- a/HTML/CSS/styles.css
+++ b/HTML/CSS/styles.css
@@ -68,7 +68,33 @@ nav ul{
     display: block;
   }
   /* Dropdown end */
-  
+  /* dropdown2_start */
+  .dropdown .btn-primary{
+    background-color:#1b2734 ;
+    border:#1b2734 ;
+    font-size: 1.2em;
+  }
+  .dropdown .btn-primary:hover{
+    background-color:#1b2734 ;
+    border:#1b2734 ;
+    font-size: 1.2em;
+  }
+  .dropdown .btn-primary.focus{
+    background-color:#1b2734 ;
+    border:#1b2734 ;
+    font-size: 1.2em;
+  }
+  /* .dropdown .dropdown-toggle{
+    background-color:#1b2734 ;
+    border:#1b2734 ;
+    font-size: 1.2em;
+  } */
+  .dropdown .btn-primary.focus, .btn-primary:focus{
+    background-color:#1b2734 ;
+    border:#1b2734 ;
+    font-size: 1.2em;
+  }
+  /* dropdown2_end */
 .im{
   display: flex;
   justify-content: center;
@@ -115,6 +141,11 @@ font-size: 16px;
   font-size: 1.5em;
   font-weight: 2;
 }
+.mm{
+  margin-top: 120px;
+  font-size: 1.5em;
+  font-weight: 2;
+}
 .org{
   display: flex;
   margin-left: 280px;
@@ -126,20 +157,84 @@ font-size: 16px;
 .m a:visited{
   color: white;
 }
+.mm a:link{
+  color: white;
+}
+.mm a:visited{
+  color: white;
+}
 .brands{
   width: 80%;
-  margin-left: 250px;
+  margin-left: 280px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  margin-top: 50px;
 }
 .brands_im{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  justify-content: space-between;
+  margin-left:10px;
 }
 .brands h1{
   font-size: 2em;
 }
+.effet_im{
+  margin-left:30px;
+  
+}
+.effet_im:hover{
+  filter: grayscale(100%);
+}
+.effet_imm{
+  margin-left:30px;
+}
+.effet_imm:hover{
+  filter: grayscale(100%);
+}
+.col-4{
+  width: 28%;
+margin-left: 530px;
+font-size: 16px;
+}
+.affiches{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: 60%;
+  grid-row-gap: 20px;
+  grid-column-gap: 20px;
+  margin-left: 280px;
+  margin-top: 100px;
+}
 
-
+.last_effect:hover{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.last_effect img{
+  border-radius: 4px;
+}
+.text_container{
+  border: black;
+  font-size: 1.26em;
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding:15px;
+}
+.btn{
+  background-color: #3d83df;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  padding-bottom: 5px;
+  font-family: Roboto,Arial,sans-serif;
+}
+.btn:hover{
+  color:white;
+  background-color: #0348a1;
+}/*bug t3 lktiba lka7la !!!!*/
